# foo-

./: Articles&Info.txt  Makefile  README.md
jstrad_musicsynth/: event.cpp  event.hpp  interactive_instrument.cpp  interactive_instrument.hpp  main.cpp  qinstrument.cpp  qinstrument.hpp  signal.cpp  signal.hpp  track.cpp  track.hpp  wav.cpp  wav.hpp
jstrad_tests/: CMakeLists.txt  compare.cpp
